<resources>
    <string name="app_name">To-Do List</string>

    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="sign_text">계정이 없으신가요?</string>
    <string name="sign">가입하기</string>
    <string name="login">로그인</string>
    <string name="title_activity_join">JoinActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>