<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/to_do_bright_gray"
    tools:context=".LoginActivity">

    <!--logo-->
    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/app_name"
        android:textColor="@color/to_do_black"
        android:textSize="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--input_id&pw-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/input_id_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <EditText
            android:id="@+id/id_input"
            android:layout_width="356dp"
            android:layout_height="62dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/todo_background"
            android:hint="@string/id"
            android:paddingLeft="27dp"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/pw_input"
            android:layout_width="356dp"
            android:layout_height="62dp"
            android:background="@drawable/todo_background"
            android:hint="@string/pw"
            android:inputType="textPassword"
            android:paddingLeft="27dp"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/pw_re_input"
            android:layout_width="356dp"
            android:layout_height="62dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/todo_background"
            android:hint="@string/pw_re"
            android:inputType="textPassword"
            android:paddingLeft="27dp"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/pw_confirm"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="3dp"
            android:textSize="15dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--sign-->
    <TextView
        android:id="@+id/sign_btn"
        android:layout_width="162dp"
        android:layout_height="58dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/todo_background"
        android:gravity="center"
        android:text="@string/sign"
        android:textColor="@color/to_do_black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>